# vulkan-renderer

./: .gitignore  CMakeLists.txt  LICENSE
Assets/Shaders/: Base.frag.spv  Base.vert.spv
Libraries/xxhash/: CMakeLists.txt
Shaders/: Base.frag  Base.vert
Sources/: Application.cpp  Application.hpp  Asset.cpp  Asset.hpp  Journal.hpp  Renderer.cpp  Renderer.hpp  Storage.cpp  Storage.hpp  Tags.hpp  Vulkan.cpp  Vulkan.hpp  VulkanDebug.cpp  VulkanDebug.hpp  Window.cpp  Window.hpp  main.cpp
cmake/: xxhash.cmake
